[package]
name = "rustpayment"
version = "0.1.0"
edition = "2021"
authors = ["Bivek Nepal <nepalbivek08@gmail.com>"]
description = "A Rust library for integrating eSewa payment gateway - supports payment initiation, signature generation, and response validation"
license = "MIT"
repository = "https://github.com/bivekk51/rust-neppayments"
keywords = ["esewa", "payment", "gateway", "nepal", "fintech"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[lib]
name = "rustpayment"
path = "src/lib.rs"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
rand = "0.9.2"
tokio = { version = "1", features = ["full"] }
